# tsce_demo

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  README.md  app.py  docker-compose.ci.yml  main.py  pyproject.toml  pytest.ini  ratings.csv  requests.py  requirements.txt  streamlit_chat.py  tsce_demo.py
.streamlit/: secrets.toml
agents/: __init__.py  base.py  base_agent.py  domain_planner.py  evaluator.py  evolver.py  final_qa.py  hypothesis.py  judge.py  leader.py  orchestrator.py  planner.py  researcher.py  scientist.py  script_qa.py  script_writer.py  simulator.py
core/: config.py  logging_setup.py
data/: chembl_smiles.smi
docs/: SQL_test_prompts.txt  SQL_test_sys_prompt.txt  docker.md  pipeline.md  prompts.txt  promptsfor_story_300_same.txt  user_guide.md
freezegun/: __init__.py
prompts/: gpt-4o-prompts-test.txt  phase1.txt  phase2.txt
pydantic/: __init__.py
rdkit/: Chem.py  __init__.py
results/: README.md  SQL_test_sys_prompt_gpt-3.5-turbo.json  SQL_test_sys_prompt_gpt-4.1.json  SQL_test_sys_prompt_gpt-4o.json  prompts_gpt-3.5-turbo.json  prompts_gpt-4.1.json  prompts_gpt-4o.json
scripts/: check_init.sh  fetch_chembl.py  start-opensearch.sh
tests/: README.md  conftest.py  test_biosafety.py  test_docking.py  test_domain_planner.py  test_evaluator_log_summary.py  test_generation.py  test_hypothesis_module.py  test_message_queue.py  test_novelty.py  test_orchestrator_hypothesis_stage.py  test_orchestrator_judge_loop.py  test_orchestrator_output.py  test_researcher.py  (+14 more)
(+166 files in other folders)
